# neural_network

./: README.md  RUN
java_evaluator/: howToRunEvaluator
neural_network/: .gitignore  CMakeLists.txt  README.md
neural_network/src/: CMakeLists.txt  main.cpp  main.h
neural_network/src/csv_reader/: CMakeLists.txt  csv_reader.cpp  csv_reader.h
neural_network/src/csv_writer/: CMakeLists.txt  csv_writer.cpp  csv_writer.h
neural_network/src/linalg/: CMakeLists.txt  linalg.cpp  linalg.h
neural_network/src/logger/: CMakeLists.txt  logger.cpp  logger.h
neural_network/src/model/: CMakeLists.txt  model.cpp  model.h
